<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddVehicleActivity"
    android:fitsSystemWindows="true">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <!-- Main content with Toolbar -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:boxBackgroundMode="outline"
                android:layout_marginTop="8dp">

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="300dp"
                    android:id="@+id/vehiclePromptTextView"
                    android:layout_height="30dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/vehicle_prompt"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toTopOf="@+id/vehicleNameEditText"
                    app:layout_constraintStart_toStartOf="@+id/vehicleNameEditText"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="1.0" />

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="@dimen/label_height_afe"
                    android:layout_marginStart="@dimen/label_margin_start_afe"
                    android:layout_marginBottom="@dimen/label_margin_bottom_afe"
                    android:text="@string/vehicle_name"
                    android:textSize="@dimen/label_text_size_afe"
                    app:layout_constraintBottom_toTopOf="@+id/vehicleNameEditText"
                    app:layout_constraintStart_toStartOf="@+id/vehicleNameEditText"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="1.0" />

                <EditText
                    android:id="@+id/vehicleNameEditText"
                    style="@style/Widget.Material3.TextInputEditText.FilledBox"
                    android:layout_width="@dimen/input_width_afe"
                    android:layout_height="@dimen/input_height_afe"
                    android:layout_marginTop="@dimen/margin_top_large_afe"
                    android:autofillHints=""
                    android:background="@drawable/edit_text_style"
                    android:inputType="text"
                    android:padding="@dimen/input_padding_afe"
                    android:textSize="@dimen/input_text_size_afe"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/vehiclePromptTextView" />

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="@dimen/label_height_afe"
                    android:layout_marginStart="@dimen/label_margin_start_afe"
                    android:layout_marginBottom="@dimen/label_margin_bottom_afe"
                    android:text="@string/vehicle_make"
                    android:textSize="@dimen/label_text_size_afe"
                    app:layout_constraintBottom_toTopOf="@+id/vehicleMakeEditText"
                    app:layout_constraintStart_toStartOf="@+id/vehicleMakeEditText"
                    app:layout_constraintVertical_bias="0.0" />

                <EditText
                    android:id="@+id/vehicleMakeEditText"
                    style="@style/Widget.Material3.AutoCompleteTextView.FilledBox"
                    android:layout_width="@dimen/input_width_afe"
                    android:layout_height="@dimen/input_height_afe"
                    android:layout_marginTop="@dimen/margin_top_large_afe"
                    android:autofillHints=""
                    android:background="@drawable/edit_text_style"
                    android:inputType="text"
                    android:padding="@dimen/input_padding_afe"
                    android:textSize="@dimen/input_text_size_afe"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/vehicleNameEditText" />

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="@dimen/label_height_afe"
                    android:layout_marginStart="@dimen/label_margin_start_afe"
                    android:layout_marginBottom="@dimen/label_margin_bottom_afe"
                    android:text="@string/vehicle_model"
                    android:textSize="@dimen/label_text_size_afe"
                    app:layout_constraintBottom_toTopOf="@+id/vehicleModelEditText"
                    app:layout_constraintStart_toStartOf="@+id/vehicleModelEditText"
                    app:layout_constraintVertical_bias="0.0" />


                <EditText
                    android:id="@+id/vehicleModelEditText"
                    style="@style/Widget.Material3.AutoCompleteTextView.FilledBox"
                    android:layout_width="@dimen/input_width_afe"
                    android:layout_height="@dimen/input_height_afe"
                    android:layout_marginTop="@dimen/margin_top_large_afe"
                    android:autofillHints=""
                    android:background="@drawable/edit_text_style"
                    android:inputType="text"
                    android:padding="@dimen/input_padding_afe"
                    android:textSize="@dimen/input_text_size_afe"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/vehicleMakeEditText" />

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="@dimen/label_height_afe"
                    android:layout_marginStart="@dimen/label_margin_start_afe"
                    android:layout_marginBottom="@dimen/label_margin_bottom_afe"
                    android:text="@string/vehicle_year"
                    android:textSize="@dimen/label_text_size_afe"
                    app:layout_constraintBottom_toTopOf="@+id/vehicleYearEditText"
                    app:layout_constraintStart_toStartOf="@+id/vehicleYearEditText"
                    app:layout_constraintVertical_bias="0.0" />


                <EditText
                    android:id="@+id/vehicleYearEditText"
                    style="@style/Widget.Material3.AutoCompleteTextView.FilledBox"
                    android:layout_width="@dimen/input_width_afe"
                    android:layout_height="@dimen/input_height_afe"
                    android:layout_marginTop="@dimen/margin_top_large_afe"
                    android:autofillHints=""
                    android:background="@drawable/edit_text_style"
                    android:inputType="number"
                    android:padding="@dimen/input_padding_afe"
                    android:textSize="@dimen/input_text_size_afe"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/vehicleModelEditText" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/vehicleSaveButton"
                    android:layout_width="@dimen/input_width_afe"
                    android:layout_height="@dimen/input_height_afe"
                    android:layout_marginTop="@dimen/margin_top_large_afe"
                    android:text="@string/vehicle_button_save"
                    app:cornerRadius="8dp"
                    app:backgroundTint="?attr/colorPrimary"
                    android:textColor="?attr/colorOnPrimary"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/vehicleYearEditText" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </ScrollView>
    <!-- Navigation Drawer -->
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="@dimen/menu_width"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="false"
        app:menu="@menu/drawer_menu"
        app:headerLayout="@layout/nav_header" />
</androidx.drawerlayout.widget.DrawerLayout>